--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/grayscaledev/Wallpaper/walls-catppuccin-mocha/dark-waves.jpg
-wallpaper = ,/home/grayscaledev/Wallpaper/walls-catppuccin-mocha/dark-waves.jpg
+preload = /home/grayscaledev/Wallpaper/swordGirl.png
+wallpaper = ,/home/grayscaledev/Wallpaper/swordGirl.png
