--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/grayscaledev/Wallpaper/new/wallhaven-k899o7.png
-wallpaper = ,/home/grayscaledev/Wallpaper/new/wallhaven-k899o7.png
+preload = /home/grayscaledev/Wallpaper/new/37.jpg
+wallpaper = ,/home/grayscaledev/Wallpaper/new/37.jpg
