--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -71,7 +71,7 @@ misc {
 input {
     kb_layout = us,us
     kb_variant = dvorak, basic
-    kb_options = caps:swapescape, grp:win_space_toggle
+    kb_options = caps:swapescape, grp:win_space_toggle, compose:menu
     follow_mouse = 1
     mouse_refocus = true
 
