--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -102,7 +102,7 @@
   "clock": {
     "on-click": "gnome-calendar",
     "interval": 1,
-    "format": "{:%I:%M %p  %A %b %d}",
+    "format": "{:%H:%M %p  %A %b %d}",
     "tooltip": true,
     /* "tooltip-format": "{:%A, %d %B %Y}\n<tt>{calendar}</tt>" */
     "tooltip-format": "\n<tt>{calendar}</tt>",
