--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -78,12 +78,16 @@ bind = $mainMod Shift, P, exec, hyprshot -m region -o $HOME/Pictures/Screenshots
 
 bind = , Print, exec, hyprshot -m output -o $HOME/Pictures/Screenshots/ # all monitors screenshot capture
 
+# hyprsunset
+
+bind = $mainMod, M, exec, killall hyprsunset || hyprsunset
+
 # Brightness control
-bindel = , XF86MonBrightnessUp, exec, brightnessctl set 10+ # increase brightness
-bindel = , F10, exec, brightnessctl set 10+ # increase brightness
-bindel = , F9, exec, brightnessctl set 10- # increase brightness
-bindel = , XF86MonBrightnessDown, exec, brightnessctl set 10- # decrease brightness
-bindel = , F9, exec, sbrightnessctl set 10- # decrease brightness
+bindel = , XF86MonBrightnessUp, exec, brightnessctl set 10%+ # increase brightness
+bindel = , F10, exec, brightnessctl set 10%+ # increase brightness
+bindel = , F9, exec, brightnessctl set 10%- # increase brightness
+bindel = , XF86MonBrightnessDown, exec, brightnessctl set 10%- # decrease brightness
+bindel = , F9, exec, sbrightnessctl set 10%- # decrease brightness
 
 # Media control
 
