--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -71,8 +71,8 @@
   },
   "backlight": {
     "device": "intel_backlight",
-    "on-scroll-up": "brightnessctl set 10+",
-    "on-scroll-down": "brightnessctl set 10-",
+    "on-scroll-up": "brightnessctl set 10%+",
+    "on-scroll-down": "brightnessctl set 10%-",
     "format": "{icon} {percent}%",
     "format-icons": ["󰃞","󰃟","󰃠"]
   },
