--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -2,8 +2,9 @@
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1080@144,auto,1,
-monitor = HDMI-A-1, preferred, auto, 1, mirror, eDP-1
+monitor=eDP-1,1920x1080@144,auto,1
+#monitor = HDMI-A-1, preferred, auto, 1, mirror, eDP-1
+monitor = , preferred, auto, 1, mirror, eDP-1
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
@@ -35,6 +36,9 @@ env = HYPRCURSOR_SIZE,24
 env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = NVD_BACKEND, direct
+
+
+#permission = at-translated-set-2-keyboard, keyboard, ask
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
@@ -71,7 +75,9 @@ misc {
 input {
     kb_layout = us,us
     kb_variant = dvorak, basic
-    kb_options = caps:swapescape, grp:win_space_toggle, compose:menu
+    kb_options = caps:swapescape, grp:win_space_toggle
+    repeat_rate = 70
+    repeat_delay = 400
     follow_mouse = 1
     mouse_refocus = true
 
@@ -83,18 +89,20 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
-
+gesture = 3, horizontal, workspace
+gesture = 3, up, special
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
+binds {
+    workspace_back_and_forth = true
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+}
+
+#windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 # █▀ █▀█ █░█ █▀█ █▀▀ █▀▀
 # ▄█ █▄█ █▄█ █▀▄ █▄▄ ██▄
