--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = /home/grayscaledev/Wallpaper/eyesPaintingCatppuccin.jpg
-wallpaper = ,/home/grayscaledev/Wallpaper/eyesPaintingCatppuccin.jpg
+wallpaper {
+	monitor = eDP-1
+    path = /home/grayscaledev/Pictures/gowall/gardensInteractive.jpg
+	fit_mode = cover
+}
+splash = false
