--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -9,6 +9,7 @@ $mainMod = super # super / meta / windows key
 $scrPath = $HOME/.config/hypr/scripts
 # Assign apps
 $term = kitty
+$normalterm = kitty -e tmux
 $network = kitty -e nmtui
 $editor = kitty -e nvim
 $notes = obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
@@ -23,7 +24,6 @@ $whatsapp = firefox --new-window web.whatsapp.com
 
 # Window/Session actions
 bind = $mainMod, apostrophe, killactive, # close focused window
-bind = $mainMod, backspace, killactive, # close focused window
 bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, comma, togglefloating, # toggle the window between focus and float
 bind = $mainMod, G, togglegroup, # toggle the window between focus and group
@@ -33,8 +33,7 @@ bind = Ctrl+Alt, A, exec, killall ags || ags # toggle ags
 bind = $mainMod, W, exec, killall waybar || waybar # toggle ags
 
 #custom scripts
-bind = $mainMod, X, exec, $HOME/Scripts/bookmark.sh
-bind = $mainMod+Alt, X, exec, kitty --hold --class custom -e $HOME/Scripts/search_bookmark.sh
+bind = $mainMod+Alt, D, exec, $HOME/.local/scripts/dictionary.sh
 
 #bind = $mainMod, space, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next && notify-send "Layout Changed"
 
@@ -42,7 +41,7 @@ bind = $mainMod+Alt, X, exec, kitty --hold --class custom -e $HOME/Scripts/searc
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # Application shortcuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
-bind = $mainMod, return, exec, $term # launch terminal emulator
+bind = $mainMod, return, exec, $normalterm # launch terminal emulator
 bind = $mainMod, F3, exec, $network # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, D, exec, $dis # launch discord
