--- a/dot_config/hypr/theme.conf
+++ b/dot_config/hypr/theme.conf
@@ -1,7 +1,7 @@
 general {
-    gaps_in = 3
+    gaps_in = 4
     gaps_out = 8
-    border_size = 0
+    border_size = 2
     col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
     col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
     layout = master
@@ -16,8 +16,8 @@ group {
 }
 
 decoration {
-    rounding = 20
-    dim_inactive = true
+    rounding = 10
+    dim_inactive = false
     dim_strength = 0.1
     blur {
         enabled = yes
@@ -42,6 +42,20 @@ decoration {
         special = true
     }
 }
-layerrule = blur, swaync
-layerrule = blur, rofi
-layerrule = blur, notifications
+layerrule {
+  name = layerrule-1
+  blur = on
+  match:namespace = swaync
+}
+
+layerrule {
+  name = layerrule-2
+  blur = on
+  match:namespace = rofi
+}
+
+layerrule {
+  name = layerrule-3
+  blur = on
+  match:namespace = notifications
+}
