--- a/dot_config/gtk-4.0/settings.ini
+++ b/dot_config/gtk-4.0/settings.ini
@@ -1,2 +1,7 @@
 [Settings]
-gtk-application-prefer-dark-theme=0
+gtk-theme-name=catppuccin-mocha-blue-standard+default
+gtk-icon-theme-name=MoreWaita
+gtk-font-name=Adwaita Sans 12
+gtk-cursor-theme-name=Bibata-Modern-Ice
+gtk-cursor-theme-size=24
+gtk-application-prefer-dark-theme=1
