--- a/dot_config/hypr/windowrule.conf
+++ b/dot_config/hypr/windowrule.conf
@@ -5,87 +5,261 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 #terminals
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
-windowrulev2 = opacity 0.90 0.90,class:^(com.mitchellh.ghostty)$
+windowrule {
+  name = windowrule-1
+  opacity = 0.80 0.80
+  match:class = ^(kitty)$
+}
+
+windowrule {
+  name = windowrule-2
+  opacity = 0.90 0.90
+  match:class = ^(com.mitchellh.ghostty)$
+}
+
 
 #gnome apps
-windowrulev2 = opacity 0.90 0.90,class:^(de.haeckerfelix.Shortwave)$
-windowrulev2 = opacity 0.90 0.90,class:^(com.github.neithern.g4music)$
-windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
-windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = float,class:^(org.gnome.Calendar)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.clocks)$
-windowrulev2 = opacity 0.90 0.90,class:^(org.gnome.Software)$
-windowrulev2 = opacity 0.90 0.90,class:^(org.gnome.Calendar)$
+windowrule {
+  name = windowrule-3
+  opacity = 0.90 0.90
+  match:class = ^(de.haeckerfelix.Shortwave)$
+}
+
+windowrule {
+  name = windowrule-4
+  opacity = 0.90 0.90
+  match:class = ^(com.github.neithern.g4music)$
+}
+
+windowrule {
+  name = windowrule-5
+  opacity = 0.80 0.80
+  float = on
+  match:class = ^(nwg-look)$
+}
+
+windowrule {
+  name = windowrule-6
+  opacity = 0.80 0.70
+  match:class = ^(polkit-gnome-authentication-agent-1)$
+}
+
+windowrule {
+  name = windowrule-7
+  float = on
+  match:class = ^(xdg-desktop-portal-gtk)$
+}
+
+windowrule {
+  name = windowrule-8
+  float = on
+  opacity = 0.90 0.90
+  match:class = ^(org.gnome.Calendar)$
+}
+
+windowrule {
+  name = windowrule-9
+  opacity = 0.80 0.80
+  match:class = ^(org.gnome.clocks)$
+}
+
+windowrule {
+  name = windowrule-10
+  opacity = 0.90 0.90
+  match:class = ^(org.gnome.Software)$
+}
+
 
 #zen-browser
 
 #windowrulev2 = opacity 0.80 0.80,class:^(zen)$
-windowrulev2 = move 705 210,class:^(zen-alpha)$, title:^(Save Image)$
-windowrulev2 = size 540 720,class:^(zen-alpha)$, title:^(Save Image)$
+windowrule {
+  name = windowrule-11
+  move = (705) (210)
+  size = 540 720
+  match:class = ^(zen-alpha)$
+  match:title = ^(Save Image)$
+}
+
 
 #obsidian
 
-windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
+windowrule {
+  name = windowrule-12
+  opacity = 0.80 0.80
+  match:class = ^(obsidian)$
+}
+
 
 #localsend
-windowrulev2 = float,class:^(localsend)$
+windowrule {
+  name = windowrule-13
+  float = on
+  match:class = ^(localsend)$
+}
+
 #pavucontrol
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrule {
+  name = windowrule-14
+  float = on
+  match:class = ^(org.pulseaudio.pavucontrol)$
+}
+
 
 #zathura
 
-windowrulev2 = opacity 0.80 0.80,class:^(org.pwmt.zathura)$
+#windowrulev2 = opacity 0.80 0.80,class:^(org.pwmt.zathura)$
 
-windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrule {
+  name = windowrule-15
+  opacity = 0.80 0.70
+  float = on
+  match:class = ^(blueman-manager)$
+}
 
-windowrulev2 = float, class:^(custom)
-windowrulev2 = move 705 210,class:^(custom)$
-windowrulev2 = size 540 720,class:^(custom)$
+windowrule {
+  name = windowrule-16
+  opacity = 0.80 0.70
+  match:class = ^(nm-applet)$
+}
+
+windowrule {
+  name = windowrule-17
+  opacity = 0.80 0.70
+  match:class = ^(nm-connection-editor)$
+}
+
+windowrule {
+  name = windowrule-18
+  opacity = 0.80 0.70
+  match:class = ^(org.freedesktop.impl.portal.desktop.gtk)$
+}
+
+windowrule {
+  name = windowrule-19
+  opacity = 0.80 0.70
+  match:class = ^(org.freedesktop.impl.portal.desktop.hyprland)$
+}
+
+
+windowrule {
+  name = windowrule-20
+  float = on
+  match:class = ^(custom)
+}
+
+windowrule {
+  name = windowrule-21
+  move = (705) (210)
+  size = 540 720
+  match:class = ^(custom)$
+}
+
 
 
 #Picture-in-Picture for firefox and zen
 
-windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = noinitialfocus,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = noinitialfocus,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = move 1232 673,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = move 1232 673,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = size 640 360,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = size 640 360,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrule {
+  name = windowrule-22
+  float = on
+  no_initial_focus = on
+  move = (1232) (673)
+  size = 640 360
+  match:class = ^(firefox)$
+  match:title = ^(Picture-in-Picture)$
+}
+
+windowrule {
+  name = windowrule-23
+  float = on
+  no_initial_focus = on
+  move = (1232) (673)
+  size = 640 360
+  match:class = ^(zen-alpha)$
+  match:title = ^(Picture-in-Picture)$
+}
+
 
 #Nautilus
 
-windowrulev2 = opacity 0.90 0.80,class:^(org.gnome.Nautilus)$
-windowrulev2 = float,class:^(org.gnome.NautilusPreviewer)$
+windowrule {
+  name = windowrule-24
+  opacity = 0.90 0.80
+  match:class = ^(org.gnome.Nautilus)$
+}
 
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^$(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 940 600,class:^$(org.pulseaudio.pavucontrol)$
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = float,class:^(nm-applet)$ation-agent-1)$
+windowrule {
+  name = windowrule-25
+  float = on
+  match:class = ^(org.gnome.NautilusPreviewer)$
+}
+
+
+windowrule {
+  name = windowrule-26
+  float = on
+  match:class = ^(firefox)$
+  match:title = ^(Library)$
+}
+
+windowrule {
+  name = windowrule-27
+  float = on
+  size = 940 600
+  match:class = ^$(org.pulseaudio.pavucontrol)$
+}
+
+windowrule {
+  name = windowrule-28
+  float = on
+  match:class = ^(nm-applet)$ation-agent-1)$
+}
+
 
 #custom scripts
-windowrulev2 = size 655 180,class:^(websearch)$
-windowrulev2 = float,class:^(websearch)$
+windowrule {
+  name = windowrule-29
+  size = 655 180
+  float = on
+  match:class = ^(websearch)$
+}
+
 
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
-layerrule = blur,swaync-notification-window
-layerrule = ignorezero,swaync-notification-window
-layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-layerrule = blur,logout_dialog
+layerrule {
+  name = layerrule-1
+  blur = on
+  ignore_alpha = 0
+  match:namespace = rofi
+}
+
+layerrule {
+  name = layerrule-2
+  blur = on
+  ignore_alpha = 0
+  match:namespace = notifications
+}
+
+layerrule {
+  name = layerrule-3
+  blur = on
+  ignore_alpha = 0
+  match:namespace = swaync-notification-window
+}
+
+layerrule {
+  name = layerrule-4
+  blur = on
+  ignore_alpha = 0
+  match:namespace = swaync-control-center
+}
+
+layerrule {
+  name = layerrule-5
+  blur = on
+  match:namespace = logout_dialog
+}
+
