--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -11,6 +11,7 @@ confirm_os_window_close 0
 
 # BEGIN_KITTY_FONTS
 font_family      family="JetBrainsMonoNL Nerd Font Mono"
+# font_family      family="Iosevka"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
